--- a/index.html
+++ b/index.html
@@ -2,47 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Heart Animation with Header and Footer</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
     <style>
         /* General Reset */
-        body {
+        body, html {
             margin: 0;
             padding: 0;
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
+            font-family: 'Raleway', sans-serif;
             background: white;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            touch-action: manipulation; /* Prevent dragging */
+        }
+
+        /* Wrapper for responsive scaling */
+        .wrapper {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
-            height: 100vh;
+            height: 100%;
+            width: 100%;
+            max-width: 480px; /* Restrict width for better mobile compatibility */
+            box-sizing: border-box;
+            text-align: center;
         }
 
         /* Header */
         header {
-            width: 100%;
-            background-color: white;
-            border-bottom: 2px solid brown;
-            text-align: center;
-            padding: 15px 0;
-            font-family: 'Raleway', sans-serif;
-            font-size: 3rem;
-            color: crimson;
             flex-shrink: 0;
+            font-size: 2.5rem; /* Adjusted for mobile */
+            color: crimson;
+            padding: 10px;
+            border-bottom: 2px solid brown;
+            width: 100%;
         }
 
         /* Footer */
         footer {
-            width: 100%;
-            background-color: white;
-            border-top: 2px solid brown;
-            text-align: center;
-            padding: 50px 0;
-            font-family: 'Raleway', sans-serif;
-            font-size: 1.2rem;
+            flex-shrink: 0;
+            font-size: 1rem; /* Adjusted for mobile */
             color: brown;
-            position: relative;
+            padding: 20px;
+            border-top: 2px solid brown;
+            width: 100%;
         }
 
         /* Typing Text */
@@ -99,15 +110,15 @@
         /* Central Heart Container */
         .central-heart-container {
             position: relative;
-            width: 140px;
-            height: 140px;
+            width: 100px; /* Adjusted for mobile */
+            height: 100px; /* Adjusted for mobile */
         }
 
         /* Back Heart (Pink Layer) */
         .heart-back {
             position: absolute;
-            width: 140px;
-            height: 140px;
+            width: 100%;
+            height: 100%;
             background-color: pink;
             transform: rotate(45deg);
         }
@@ -116,30 +127,30 @@
         .heart-back::after {
             content: "";
             position: absolute;
-            width: 140px;
-            height: 140px;
+            width: 100%;
+            height: 100%;
             background-color: pink;
             border-radius: 50%;
         }
 
         .heart-back::before {
-            top: -70px;
+            top: -50%;
             left: 0;
         }
 
         .heart-back::after {
             top: 0;
-            left: -70px;
+            left: -50%;
         }
 
         /* Front Heart (Red Layer) */
         .heart-front {
             position: absolute;
-            width: 100px;
-            height: 100px;
+            width: 70%;
+            height: 70%;
             background-color: red;
-            top: 20px;
-            left: 20px;
+            top: 15%;
+            left: 15%;
             transform: rotate(45deg);
         }
 
@@ -147,27 +158,27 @@
         .heart-front::after {
             content: "";
             position: absolute;
-            width: 100px;
-            height: 100px;
+            width: 100%;
+            height: 100%;
             background-color: red;
             border-radius: 50%;
         }
 
         .heart-front::before {
-            top: -50px;
+            top: -50%;
             left: 0;
         }
 
         .heart-front::after {
             top: 0;
-            left: -50px;
+            left: -50%;
         }
 
         /* Floating Hearts */
         .small-heart {
             position: absolute;
-            width: 15px;
-            height: 15px;
+            width: 12px;
+            height: 12px;
             background-color: red;
             transform: rotate(0deg);
             opacity: 1;
@@ -178,8 +189,8 @@
         .small-heart::after {
             content: "";
             position: absolute;
-            width: 15px;
-            height: 15px;
+            width: 12px;
+            height: 12px;
             background-color: red;
             border-radius: 50%;
         }
@@ -212,23 +223,25 @@
     </style>
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        For my love <3
-    </header>
+    <div class="wrapper">
+        <!-- Header -->
+        <header>
+            For my love <3
+        </header>
 
-    <!-- Central Animation Section -->
-    <div class="animation-container">
-        <div class="central-heart-container" id="heart">
-            <div class="heart-back"></div>
-            <div class="heart-front"></div>
+        <!-- Central Animation Section -->
+        <div class="animation-container">
+            <div class="central-heart-container" id="heart">
+                <div class="heart-back"></div>
+                <div class="heart-front"></div>
+            </div>
         </div>
-    </div>
 
-    <!-- Footer -->
-    <footer>
-        <div class="typing-text" id="text"></div>
-    </footer>
+        <!-- Footer -->
+        <footer>
+            <div class="typing-text" id="text"></div>
+        </footer>
+    </div>
 
     <script>
         const textElement = document.getElementById('text');
@@ -272,12 +285,12 @@
 
             // Random position near the pink heart
             const angle = Math.random() * 360;
-            const radius = 70;
+            const radius = 50; // Adjusted for mobile
             const x = Math.cos((angle * Math.PI) / 180) * radius;
             const y = Math.sin((angle * Math.PI) / 180) * radius;
 
-            heart.style.left = `${70 + x}px`;
-            heart.style.top = `${70 - y}px`;
+            heart.style.left = `${50 + x}px`; // Adjusted for mobile
+            heart.style.top = `${50 - y}px`;
 
             heartContainer.appendChild(heart);
 
