--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Heart Animation with Header and Footer</title>
+    <title>For my loml</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
     <style>
@@ -235,7 +235,7 @@
 
     <script>
         const textLines = [
-            "Hello there my loml. <br> How are you? Hope you're doing great this night 😸",
+            "Hello my loml. <br> How are you? Hope you're doing great tonight 😸",
             "I just want to remind you <br> that no one could take your place.",
             "No one can replace you, you're the only girl of my life.",
             "I just want to let you know, that I love you more than you know.",
