--- a/index.html
+++ b/index.html
@@ -235,12 +235,12 @@
 
     <script>
         const textLines = [
-            "Hello my loml. <br> How are you? Hope you're doing great tonight 😸",
+            "Hello my loml. <br> How are you? <br> Hope you're doing great tonight 😸",
             "I just want to remind you <br> that no one could take your place.",
             "No one can replace you, <br> you're the only girl of my life.",
             "I just want to let you know, <br> that I love you more than you know.",
             "I love you that words can't even explain.",
-            "You weren't the FIRST girl I've loved, <br> but you will be the FIRST girl I truly love <3.",
+            "You weren't the FIRST girl I've loved, <br> but you will be the FIRST girl I'll truly love <3.",
             "I love you soo muchh, <br> miss you my pretty princess 😸😸"
         ];
 
