--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
     <script>
         const textLines = [
-            "Hello my loml. <br> How are you? <br> Hope you're doing great tonight 😸",
+            "Hello my loml. How are you? <br> Hope you're doing great tonight 😸",
             "I just want to remind you <br> that no one could take your place.",
             "No one can replace you, <br> you're the only girl of my life.",
             "I just want to let you know, <br> that I love you more than you know.",
